# sokoltest

./: CMakeLists.txt  README.md  bundle.plist
src/: cimgui-sapp.c  cimgui-sapp.m  common.h  nuklear-sapp.c  nuklear-sapp.m  ringbuffer.h  sokol_app.c  sokol_app.h  sokol_app.m  sokol_audio.c  sokol_audio.h  sokol_audio.m  sokol_gfx.c  sokol_gfx.h  sokol_gfx.m  sokol_nuklear.h  thread.h
src/cimgui/: cimgui.cpp  cimgui.h
src/cimgui/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h
src/nuklear/: nuklear.c  nuklear.h
src/rtmidi/: RtMidi.cpp  midiprobe.cpp  qmidiin.c  qmidiin.cpp  rtmidi_c.cpp  rtmidi_c.h
